--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vue Vite</title>
+  <title>Flixus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
